Fixed the layout bug for print version of documents. fixes #218

--- a/documentation/_layout/style.css
+++ b/documentation/_layout/style.css
@@ -102,18 +102,20 @@ div#wrapper {
 	box-shadow: 5px 5px 5px #555555;
 	background-color: #ffffff;
 }
-
-/* Navigation */
-nav {
-	color: #000000;
-	margin: 10px;
-	padding: 10px;
+/* Automatic orientation of the navigation */
+div#wrapper.innerNavigation {
+		margin: auto;
+		left: 0;
 }
 
+/* Navigation */
 nav {
 	position: fixed;
 	top: 0;
 	left: 50%;
+	color: #000000;
+	margin: 10px;
+	padding: 10px;
 	margin-left: -550px;
 	width: 230pt;
 	max-height: 95%;
@@ -122,6 +124,17 @@ nav {
 	border-radius: 3px;
 	box-shadow: 5px 5px 5px #555555;
 	background-color: #ffffff;
+}
+
+/* Automatic orientation of the navigation */
+nav.innerNavigation {
+		position: static;
+		width: auto;
+		margin: 0;
+		padding: 0;
+		left: 0;
+		box-shadow: none;
+		border: 0;
 }
 
 nav div.title {
